Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/mime.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  The ImageMagick mime methods.
*/
typedef struct _MimeInfo
  MimeInfo;

extern  char
  **GetMimeList(const char *,size_t *,ExceptionInfo *);
extern  char
  *MagickToMime(const char *);

extern  const char
  *GetMimeDescription(const MimeInfo *);
extern  const char
  *GetMimeType(const MimeInfo *);

extern  MagickBooleanType
  ListMimeInfo(FILE *,ExceptionInfo *);
extern  MagickBooleanType
  MimeComponentGenesis(void);

extern  const MimeInfo
  *GetMimeInfo(const char *,const unsigned char *,const size_t,ExceptionInfo *);
extern  const MimeInfo
  **GetMimeInfoList(const char *,size_t *,ExceptionInfo *);

extern  void
  MimeComponentTerminus(void);